syntax = "proto3";

package graft.proto;

option go_package = "github.com/eleven-am/graft/proto/gen";

import "google/protobuf/timestamp.proto";

message Empty {}

message NodeInfo {
  string id = 1;
  string address = 2;
  int32 port = 3;
  map<string, string> metadata = 4;
}

message Status {
  bool success = 1;
  string error = 2;
  string message = 3;
}

message LogEntry {
  int64 index = 1;
  int64 term = 2;
  string type = 3;
  bytes data = 4;
  google.protobuf.Timestamp timestamp = 5;
}